--- a/home/home.html
+++ b/home/home.html
@@ -10,10 +10,13 @@
 </head>
 <body>
         <div class="profile-bar">
-            <div class="profile-pic">
-                <img src="imageneshome/image.png" alt="" class="profile-pic">
-            </div>
+            <a href="../views/Elige_Temas/Elige_Tema_Vista-1.html">
+                <div class="profile-pic">
+                    <img src="imageneshome/image.png" alt="" class="profile-pic">
+                </div>
+            </a>
             <span class="username">Camilo</span>
+            
             <div class="stats">
                 <div class="stat-item">
                     <img src="imageneshome/image copy.png" alt="Coins" class="stat-icon">
@@ -34,7 +37,7 @@
             <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 4.png" alt="Calendar"></div></a>
             <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 5.png" alt="Store"></div></a>
             <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 6.png" alt="Idea"></div></a>
-            <a href=""></a><div class="sidebar-icon"><img src="imageneshome/image copy 7.png" alt="Axolotl"></div></a>
+            <a href="../views/Foto_Perfil/CIMG_Vista_1.html"><div class="sidebar-icon"><img src="imageneshome/image copy 7.png" alt="Axolotl"></div></a>
             <a href=""></a><div class="sidebar-icon"><img src="imageneshome/image copy 8.png" alt="Exit"></div></a>
         </div>
 
