--- a/home/home.html
+++ b/home/home.html
@@ -34,9 +34,9 @@
         </div>
 
         <div class="sidebar">
-            <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 4.png" alt="Calendar"></div></a>
+            <a href="../views/retos/reto-principal.html"><div class="sidebar-icon"><img src="imageneshome/image copy 4.png" alt="Calendar"></div></a>
             <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 5.png" alt="Store"></div></a>
-            <a href=""><div class="sidebar-icon"><img src="imageneshome/image copy 6.png" alt="Idea"></div></a>
+            <a href="../views/sugerencias/sugerencia1.html"><div class="sidebar-icon"><img src="imageneshome/image copy 6.png" alt="Idea"></div></a>
             <a href="../views/Foto_Perfil/CIMG_Vista_1.html"><div class="sidebar-icon"><img src="imageneshome/image copy 7.png" alt="Axolotl"></div></a>
             <a href=""></a><div class="sidebar-icon"><img src="imageneshome/image copy 8.png" alt="Exit"></div></a>
         </div>
